syntax = "proto3";


message Options {
    repeated string parent_node = 1;
    string swarm_key = 2;
    repeated string listen = 3;
    string api = 4;
    string gateway = 5;
    string rpc =  6;
    optional string storage_dir = 7;
}

service Web3StorageService {
    rpc getPeerID (Empty) returns (PeerId) {}
    rpc ExecuteWeb3Storage (Options) returns (Empty) {}
    rpc uploadThumbnail (ContentThumbnailRequest) returns (ContentFileResponse) {}
    rpc uploadFile (ContentFileRequest) returns (ContentFileResponse) {}
    rpc lsDir (LsDirRequest) returns (ContentFileResponse) {}
    rpc publishFile (PublishFileRequest) returns (ContentFileResponse) {}
}

message PeerId {
    string peerID = 1;
}

message LsDirRequest {
    string cid  = 1;
    Options options = 2;
}

message PublishFileRequest {
    string obj =  1;
    Options options = 2;
}

message ContentFileRequest {
    repeated string path  = 1;
    Options options = 2;
}

message ContentThumbnailRequest {
    string path  = 1;
    Options options = 2;
}

message ContentFileResponse {
    string data = 1;
}

message Empty {}